--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 online_retail.csv filter=lfs diff=lfs merge=lfs -text
 .csv filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
